--- a/css/ckeditor.css
+++ b/css/ckeditor.css
@@ -24,3 +24,16 @@
     padding-top: 8px;
     padding-bottom: 8px;
 }
+
+.col-2,
+.col-3 {
+    display: flex;
+}
+
+.col-2 > div {
+    width: 50%;
+}
+
+.col-3 > div {
+    width: 33.33%;
+}
